codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__session_start_hook_events_render_snapshot.snap
---
source: tui/src/chatwidget/tests/helpers.rs
expression: combined
---
• SessionStart hook completed
  └ warning: Heads up from the hook
  └ ctrl + t to view transcript
