codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__side_context_label_shows_hidden_side.snap
---
source: tui/src/chatwidget/tests/side.rs
expression: terminal.backend()
---
"────────────────────────────────────────────────────────────────────────────────"
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol                                                ctrl + / for side  "
